--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "vuex-simple-store",
+  "name": "simple-vuex",
   "version": "1.0.0",
   "description": "Trivialize your store",
   "main": "src/index.js",
